fixed header breaking on iphones

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -48,6 +48,8 @@
 
 #linkTwo {
     font-weight: lighter;
+    width: 6.25rem;
+    text-align: center;
 }
 
 #linkThree {
